# VCF-RDFizer

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  vcf_rdfizer.cover  vcf_rdfizer.py
.github/workflows/: publish-docker.yml  publish-python.yml  tests.yml
conda-recipe/: README.md  meta.yaml
rules/: README.md  default_rules.ttl
scripts/: release.py
src/: compression.sh  rules.ttl  run_conversion.sh  update_rules.sh  vcf_as_tsv.sh
test/: README.md  helpers.cover  helpers.py  test_compression_unit.cover  test_compression_unit.py  test_run_conversion_unit.cover  test_run_conversion_unit.py  test_update_rules_unit.py  test_vcf_as_tsv_unit.cover  test_vcf_as_tsv_unit.py  test_vcf_rdfizer_cross_platform_unit.py  test_vcf_rdfizer_unit.cover  test_vcf_rdfizer_unit.py
test/test_vcf_files/: test-10k.vcf  test-1k.vcf
test_vcf_files/: test-100.vcf
vcf_rdfizer_data/: __init__.py
vcf_rdfizer_data/rules/: default_rules.ttl
