[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vcf-rdfizer"
version = "1.0.0"
description = "Docker-first VCF to RDF conversion wrapper with compression/decompression modes"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "VCF-RDFizer maintainers" }
]
keywords = ["bioinformatics", "vcf", "rdf", "rml", "docker", "hdt"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ecrum19/VCF-RDFizer"
Issues = "https://github.com/ecrum19/VCF-RDFizer/issues"

[project.scripts]
vcf-rdfizer = "vcf_rdfizer:main"

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "twine>=5.1.1",
]

[tool.setuptools]
py-modules = ["vcf_rdfizer"]
packages = ["vcf_rdfizer_data"]
include-package-data = true

[tool.setuptools.package-data]
vcf_rdfizer_data = ["rules/default_rules.ttl"]
